--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,9 @@
-<div class="page" ng-controller="MainCtrl">
+<div class="page container" ng-controller="MainCtrl">
 	<div class="row">
-		<h1>Home</h1>
+		<div class="jumbotron">
+			<h1>Synergetic Service</h1>
+			<p>We enable people around the world to organize and contribute to meaningful service.</p>
+			<p>So many people have very little opportunity.  The Lord has provided us with a charge to serve and help his children.  We accept this charge and commit to move forward with dedication in serving our brothers and sisters everywhere.</p>
+		</div>
 	</div>
 </div>
