--- a/partials/header.html
+++ b/partials/header.html
@@ -8,14 +8,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#/home">Synergize</a>
+			<a class="navbar-brand" href="#/">Synergize</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
+				<li><a href="#/people">People</a></li>
 				<li><a href="#/projects">Projects</a></li>
-				<li><a href="#/getInvolved">Get Involved</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
@@ -34,10 +34,29 @@
 			</form>
 			<ul class="nav navbar-nav navbar-right">
 				<li ng-hide="user"><a ng-click="rootTools.user.loginModal()">Login</a></li>
+				<!-- <li ng-hide="user"><a ng-click="rootTools.auth()">Login</a></li> -->
+				<li ng-show="user" class="notify" title="Messages">
+					<a href="#/dashboard/messages">
+						<i class="fa fa-envelope"></i>
+						<span class="badge">3</span>
+					</a>
+				</li>
+				<li ng-show="user" class="notify" title="Tasks">
+					<a href="#/dashboard/tasks">
+						<i class="fa fa-tasks"></i>
+						<span class="badge">4</span>
+					</a>
+				</li>
+				<li ng-show="user" class="notify" title="Alerts">
+					<a href="#/dashboard/alerts">
+						<i class="fa fa-bell"></i>
+						<span class="badge">1</span>
+					</a>
+				</li>
 				<li ng-show="user" class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{user.firstName}} <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="#/account">Manage</a></li>
+						<li><a href="#/account">Profile</a></li>
 						<li><a ng-click="rootTools.user.logout()">Logout</a></li>
 					</ul>
 				</li>
