--- a/partials/header.html
+++ b/partials/header.html
@@ -33,7 +33,7 @@
 				</div>
 			</form>
 			<ul class="nav navbar-nav navbar-right">
-				<li ng-hide="user"><a ng-click="rootTools.user.loginModal()">Login</a></li>
+				<li ng-hide="user"><a href="#/main/login">Login</a></li>
 				<!-- <li ng-hide="user"><a ng-click="rootTools.auth()">Login</a></li> -->
 				<li ng-show="user" class="notify" title="Messages">
 					<a href="#/dashboard/messages">
