--- a/partials/header.html
+++ b/partials/header.html
@@ -8,22 +8,27 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#/">Synergize</a>
+			<a class="navbar-brand" href="#/dashboard">Synergize</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#/people">People</a></li>
-				<li><a href="#/projects">Projects</a></li>
+				<li><a href="#/dashboard/people">People</a></li>
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="#/admin/people">People</a></li>
-						<li><a href="#/admin/projects">Projects</a></li>
-						<li><a href="#/admin/dashboard">Dashboard</a></li>
+						<!--<li><a href="#/admin/settings">Settings</a></li>-->
+						<!--<li><a href="#/admin/users">Users</a></li>-->
+						<!--<li><a href="#/admin/reports">Reports</a></li>-->
+						<!--<li class="divider"></li>-->
+						<li><a href="#/dashboard/people">Contacts</a></li>
+						<li><a href="#/dashboard/initiatives">Initiatives</a></li>
+						<li><a href="#/dashboard/projects">Projects</a></li>
 						<li class="divider"></li>
-						<li><a href="#/feedback">More</a></li>
+						<li><a href="#/dashboard/tracking" title="Track: Tasks, Time, Miles">Tracking</a></li>
+						<li><a href="#/dashboard/comm">Communication</a></li>
+						<li><a href="#/dashboard/idea">Aha! Idea</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -35,21 +40,21 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li ng-hide="user"><a href="#/main/login">Login</a></li>
 				<!-- <li ng-hide="user"><a ng-click="rootTools.auth()">Login</a></li> -->
-				<li ng-show="user" class="notify" title="Messages">
-					<a href="#/dashboard/messages">
-						<i class="fa fa-envelope"></i>
+				<li ng-show="user" class="notify" title="Communication">
+					<a href="#/dashboard/comm">
+						<i class="fa fa-comments"></i>
 						<span class="badge">2</span>
 					</a>
 				</li>
 				<li ng-show="user" class="notify" title="Tasks">
 					<a href="#/dashboard/tasks">
 						<i class="fa fa-tasks"></i>
-						<span class="badge">2</span>
+						<span class="badge">{{tasks.length}}</span>
 					</a>
 				</li>
-				<li ng-show="user" class="notify" title="Alerts">
-					<a href="#/dashboard/alerts">
-						<i class="fa fa-bell"></i>
+				<li ng-show="user" class="notify" title="Users">
+					<a href="#/admin/users">
+						<i class="fa fa-user"></i>
 						<span class="badge">1</span>
 					</a>
 				</li>
