Added ability to add contacts & fixed task list

--- a/partials/header.html
+++ b/partials/header.html
@@ -53,7 +53,7 @@
 					</a>
 				</li>
 				<li ng-show="user" class="notify" title="Users">
-					<a href="#/admin/users">
+					<a id="asdf">
 						<i class="fa fa-user"></i>
 						<span class="badge">1</span>
 					</a>
