--- a/partials/header.html
+++ b/partials/header.html
@@ -14,7 +14,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><a href="#/dashboard/people">People</a></li>
+				<li><a href="#/dashboard/contacts">People</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
@@ -22,7 +22,7 @@
 						<!--<li><a href="#/admin/users">Users</a></li>-->
 						<!--<li><a href="#/admin/reports">Reports</a></li>-->
 						<!--<li class="divider"></li>-->
-						<li><a href="#/dashboard/people">Contacts</a></li>
+						<li><a href="#/dashboard/contacts">Contacts</a></li>
 						<li><a href="#/dashboard/initiatives">Initiatives</a></li>
 						<li><a href="#/dashboard/projects">Projects</a></li>
 						<li class="divider"></li>
@@ -61,7 +61,7 @@
 				<li ng-show="user" class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{user.firstName}} <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="#/account">Profile</a></li>
+						<li><a href="#/user/account">Profile</a></li>
 						<li><a ng-click="rootTools.user.logout()">Logout</a></li>
 					</ul>
 				</li>
