Modified routes and continuing work on contact page.

--- a/partials/header.html
+++ b/partials/header.html
@@ -38,7 +38,7 @@
 				</div>
 			</form>
 			<ul class="nav navbar-nav navbar-right">
-				<li ng-hide="user"><a href="#/main/login">Login</a></li>
+				<li ng-hide="user"><a href="#/login">Login</a></li>
 				<!-- <li ng-hide="user"><a ng-click="rootTools.auth()">Login</a></li> -->
 				<li ng-show="user" class="notify" title="Communication">
 					<a href="#/dashboard/comm">
