--- a/partials/timeline.html
+++ b/partials/timeline.html
@@ -4,11 +4,11 @@
 		<div class="tl-circ" ng-hide="event.isMilestone" ng-class="'tl-'+event.color"><i class="fa fa-{{event.icon}}" ng-show="event.icon"></i></div>
 		<div class="tl-panel" ng-hide="event.isMilestone">
 			<div class="tl-heading">
-				<h4>{{event.title}}</h4>
+				<h4 ng-click="rootTools.nav('#/dashboard/timeline/'+event.original.contact.objectId)">{{event.title}}</h4>
 				<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> {{event.moment}}</small></p>
 			</div>
 			<div class="tl-body">
-				<p>{{event.body}}</p>
+				<div ng-bind-html="event.body"></div>
 				<a class="btn pull-right btn-{{event.link.style}}" href="{{event.link.url}}" ng-show="event.link">{{event.link.text}}</a>
 			</div>
 		</div>
